# SciXBackofficeClassicConnector

./: README.md  pyproject.toml
AVRO_Schemas/: Master_database_value_schema.avsc
SciXBackofficeConnector/: config.py
SciXBackofficeConnector/connect_config_files/: register-postgres.json  worker.properties
SciXBackofficeConnector/scripts/: kafka_create_topics.py  start_connector.py
